# blokus

./: .ghci  .gitignore  .hgignore  Board.hs  Cmdline.hs  Corner.hs  GameState.hs  Main.hs  Offset.hs  Piece.hs  Placement.hs  Player.hs  README.md  Score.hs  Search.hs  Territory.hs  Test.hs  Types.hs  Utils.hs  blokus.cabal  board.c  callgrind.out.6640  cell.c  compile.sh  defs.h  gamestate.c  heuristics.c  heuristicsearch.c  main.c  makefile  piece.c  placement.c  profile.sh  rebuild-and-profile.sh  rebuild-and-test.sh  search.c  test.sh
scala/core/: Board.scala  BoardTests.scala  Console.scala  Edge.scala  Game.scala  GameTests.scala  GameTooLongException.scala  IllegalPlacementException.scala  Move.scala  Orientation.scala  Piece.scala  PieceNotAvailableException.scala  PieceTests.scala  Player.scala  PlayerTests.scala  Rotation.scala  Shift.scala  ShiftTests.scala  Strategy.scala  out
scala/heuristic/: AvailableCorners.scala  AvailableCornersDiameter.scala  AvgShortestPathDistance.scala  Calculator.scala  ConstantSumHeuristic.scala  CurrentScore.scala  Heuristic.scala  LinearComboCalculator.scala  SimpleHeuristic.scala  WinningMarginHeuristic.scala
scala/strategy/: AntagonisticSearchStrategy.scala  IterativeDeepeningStrategy.scala  ManualStrategy.scala  ManualStrategyTests.scala  MaxNStrategy.scala  MaxNStrategyTests.scala  Node.scala  NodeTests.scala  PlayerState.scala  SpeculativeMaxNStrategy.scala  SpeculativeMaxNStrategyTests.scala
