Name:           blokus
Version:        0.3
License-file:   LICENSE
Author:         David Judd <david.a.judd@gmail.com>
Maintainer:     David Judd <david.a.judd@gmail.com>
build-type:     Simple
cabal-version:  >= 1.2

Executable blokus
    Main-Is:            Main.hs
    Build-depends:      base, array
    ghc-options:        -O2 -funbox-strict-fields -XGeneralizedNewtypeDeriving
    ghc-prof-options:   -rtsopts -auto-all -caf-all -fforce-recomp

Test-Suite test-blokus
    Type:           exitcode-stdio-1.0
    Main-Is:        Test.hs
    Build-depends:  base, array, QuickCheck
