Name:           blokus
Version:        0.3
License-file:   LICENSE
Author:         David Judd <david.a.judd@gmail.com>
Maintainer:     David Judd <david.a.judd@gmail.com>
build-type:     Simple
cabal-version:  >= 1.2

Executable blokus
    Main-Is:            Main.hs
    Build-depends:      base, vector
    ghc-options:        -fforce-recomp -O2 -optc-O3 -funbox-strict-fields -optc-ffast-math
    ghc-prof-options:   -rtsopts -auto-all -caf-all -ddump-simpl
    extensions:         GeneralizedNewtypeDeriving BangPatterns

Test-Suite test-blokus
    Type:           exitcode-stdio-1.0
    Main-Is:        Test.hs
    Build-depends:  base, vector, QuickCheck
    extensions:     GeneralizedNewtypeDeriving BangPatterns
